DuPont DevSB/src/objects/DPSKevlarCustomSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>KV_Campaing_Name__c</fullName>
        <description>This field is used to assign the campaign name in the Kevlar Hose Selector Tool.</description>
        <label>Campaing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_Inner_Wall_Thickness_Lower_Limit__c</fullName>
        <description>Used in validation rule to stop search criteria record to be created if inner wall thickness is less than this value. Used for DPS Kevlar Hose Selector App.</description>
        <label>Inner Wall Thickness Lower Limit</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_Inner_Wall_Thickness_Upper_Limit__c</fullName>
        <description>This field contains the maximum value of Inner wall thickness</description>
        <label>Inner Wall Thickness Upper Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_Knitting_angle_lower_limit__c</fullName>
        <description>This field contains the minimum value of knitting angle</description>
        <label>Knitting angle lower limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_Knitting_angle_upper_limit__c</fullName>
        <description>This field contains the maximun allowed value for knitting angle</description>
        <label>Knitting angle upper limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_PSI_to_Bar__c</fullName>
        <description>This is the field used for converting PSI into Bar unit.</description>
        <label>PSI to Bar</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_inch_to_mm__c</fullName>
        <description>This field is used for conversion of inch to mm</description>
        <label>inch to mm</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>DPSKevlarCustomSetting</label>
</CustomObject>